--- a/Gestion_Enseignement/src/main/resources/templates/template_ChefDepartement.html
+++ b/Gestion_Enseignement/src/main/resources/templates/template_ChefDepartement.html
@@ -24,10 +24,7 @@
                         <a><span>Accueil</span></a>
                     </li>
                     <li>
-                        <a><span>Emploi du Temps</span></a>
-                    </li>
-                    <li>
-                        <a><span>Syllabus</span></a>
+                        <a th:href="@{/ChefDepartement/EmploiDuTemps}"><span>Emploi du Temps</span></a>
                     </li>
                     <li>
                         <a th:href="@{/ChefDepartement/Repartition}"><span>Repartition</span></a>
