--- a/Gestion_Enseignement/src/main/resources/templates/chefDepartement_Enseignant.html
+++ b/Gestion_Enseignement/src/main/resources/templates/chefDepartement_Enseignant.html
@@ -16,10 +16,7 @@
                         <a><span>Accueil</span></a>
                     </li>
                     <li>
-                        <a><span>Emploi du Temps</span></a>
-                    </li>
-                    <li>
-                        <a><span>Syllabus</span></a>
+                        <a th:href="@{/ChefDepartement/EmploiDuTemps}"><span>Emploi du Temps</span></a>
                     </li>
                     <li>
                         <a th:href="@{/ChefDepartement/Repartition}"><span>Repartition</span></a>
@@ -29,6 +26,12 @@
                     </li>
                     <li>
                         <a th:href="@{/ChefDepartement/Formation}"><span>Formations</span></a>
+                    </li>
+                    <li>
+                        <a th:href="@{/ChefDepartement/Maquette}"><span>Maquette</span></a>
+                    </li>
+                    <li>
+                        <a th:href="@{/ChefDepartement/Choix}"><span>Choix</span></a>
                     </li>
                     <li>
                         <a th:href="@{/ChefDepartement/GestionEmploiDuTemps}"><span>Gestion emploi du temps</span></a>
