--- a/Gestion_Enseignement/src/main/resources/templates/classe.html
+++ b/Gestion_Enseignement/src/main/resources/templates/classe.html
@@ -24,10 +24,7 @@
                         <a><span>Accueil</span></a>
                     </li>
                     <li>
-                        <a><span>Emploi du Temps</span></a>
-                    </li>
-                    <li>
-                        <a ><span>Syllabus</span></a>
+                        <a th:href="@{/ChefDepartement/EmploiDuTemps}"><span>Emploi du Temps</span></a>
                     </li>
                     <li>
                         <a th:href="@{/ChefDepartement/Repartition}"><span>Repartition</span></a>
@@ -40,6 +37,9 @@
                     </li>
                     <li>
                         <a th:href="@{/ChefDepartement/Maquette}"><span>Maquette</span></a>
+                    </li>
+                    <li>
+                        <a th:href="@{/ChefDepartement/Choix}"><span>Choix</span></a>
                     </li>
                     <li>
                         <a th:href="@{/ChefDepartement/GestionEmploiDuTemps}"><span>Gestion emploi du temps</span></a>
