--- a/Gestion_Enseignement/src/main/resources/templates/ec.html
+++ b/Gestion_Enseignement/src/main/resources/templates/ec.html
@@ -25,10 +25,7 @@
                         <a><span>Accueil</span></a>
                     </li>
                     <li>
-                        <a><span>Emploi du Temps</span></a>
-                    </li>
-                    <li>
-                        <a><span>Syllabus</span></a>
+                        <a th:href="@{/ChefDepartement/EmploiDuTemps}"><span>Emploi du Temps</span></a>
                     </li>
                     <li>
                         <a th:href="@{/ChefDepartement/Repartition}"><span>Repartition</span></a>
@@ -37,10 +34,13 @@
                         <a th:href="@{/ChefDepartement/Enseignant}"><span>Enseignants</span></a>
                     </li>
                     <li>
-                        <a th:href="@{/ChefDepartement/Maquette}"><span>Maquette</span></a>
+                        <a th:href="@{/ChefDepartement/Formation}"><span>Formations</span></a>
                     </li>
                     <li>
                         <a th:href="@{/ChefDepartement/Maquette}"><span>Maquette</span></a>
+                    </li>
+                    <li>
+                        <a th:href="@{/ChefDepartement/Choix}"><span>Choix</span></a>
                     </li>
                     <li>
                         <a th:href="@{/ChefDepartement/GestionEmploiDuTemps}"><span>Gestion emploi du temps</span></a>
@@ -55,7 +55,7 @@
                             <li>
                                 <a th:href="@{/profil}"><span>Profil</span></a>
                             </li>
-                            <li><a th:href="@{/logout}"><span>Déconnexion</span></a>
+                            <li><a th:href="@{/logout}"><span>Deconnexion</span></a>
                             </li>
                         </ul>
                     </li>
