--- a/Gestion_Enseignement/src/main/resources/templates/emploiDuTempsChef.html
+++ b/Gestion_Enseignement/src/main/resources/templates/emploiDuTempsChef.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
-<html lang="fr"  xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>page chefDepartement</title>
-
+    <title>Emploi du Temps</title>
     <link rel="stylesheet" th:href="@{/css/bootstrap.css}"/>
     <link rel="stylesheet" th:href="@{/css/buttons.dataTables.min.css}"/>
     <link rel="stylesheet" th:href="@{/css/jquery.dataTables.min.css}"/>
@@ -12,9 +11,32 @@
     <script th:src="@{/js/bootstrap.js}"></script>
     <script th:src="@{/js/dataTables.buttons.min.js}"></script>
     <script th:src="@{/js/jquery.dataTables.min.js}"></script>
+
+    <style>
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            text-align: center;
+        }
+        th, td {
+            border: 1px solid black;
+            padding: 8px;
+        }
+        .cm {
+            color: green;
+            font-weight: bold;
+        }
+        .td {
+            color: orange;
+            font-weight: bold;
+        }
+        .tp {
+            color: red;
+            font-weight: bold;
+        }
+    </style>
 </head>
 <body>
-
 <header>
     <nav class="navbar navbar-inverse">
         <div class="container-fluid">
@@ -63,50 +85,37 @@
         </div><!-- /.container-fluid -->
     </nav>
 </header>
-<div layout:fragment="custom-content" >
-    <table class="table table-bordered table-striped" id="table_Maquette">
-        <thead>
-        <tr>
-            <th>Prenom de l'enseignant</th>
-            <th>Nom de l'enseignant</th>
-            <th>code</th>
-            <th>enseignement</th>
-            <th>Type</th>
-            <th>formation</th>
-            <th>Classe</th>
-            <th>Opération</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr th:each="choix:${choix}">
-            <td th:text="${choix.enseignant.getPrenom()}"></td>
-            <td th:text="${choix.enseignant.getNom()}"></td>
-            <td th:text="${choix.getEc().getCode()}"></td>
-            <td th:text="${choix.getEc().getLibelle()}"></td>
-            <td th:text="${choix.getType()}"></td>
-            <td th:text="${choix.getFormation().getNom()}"></td>
-            <td th:text="${choix.getClasse().getNiveau()}"></td>
-            <td>
 
-                <form th:action="@{/ChefDepartement/Choix/Accepter/{choixId}(choixId=${choix.id})}" method="post" style="display:inline;">
-                    <button type="submit" class="btn btn-success btn-xs"
-                            th:disabled="${choix.isAccepteParChef()}">
-                        Accepter
-                    </button>
-                </form>
-                <form th:action="@{/ChefDepartement/Choix/Refuser/{choixId}(choixId=${choix.id})}" method="post" style="display:inline;">
-                    <button type="submit" class="btn btn-danger btn-xs">
-                        Refuser
-                    </button>
-                </form>
+<h2>Emploi du Temps de <span th:text="${nom}"></span> <span th:text="${prenom}"></span></h2>
 
-            </td>
+<table>
+    <thead>
+    <tr>
+        <th>Heure</th>
+        <th>Lundi</th>
+        <th>Mardi</th>
+        <th>Mercredi</th>
+        <th>Jeudi</th>
+        <th>Vendredi</th>
+        <th>Samedi</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr th:each="heure : ${#numbers.sequence(8, 19)}">
+        <td th:text="${heure} + 'h - ' + (${heure}+1) + 'h'"></td>
+        <td th:each="jour : ${jours}">
+            <th:block th:if="${emplois != null}">
+            <span th:each="emploi : ${emplois}"
+                  th:if="${emploi.debut.getHour() <= heure and heure < emploi.fin.getHour() and emploi.jour == jour}"
+                  th:text="${emploi.ec} + ' - ' + 'Salle: ' + ${emploi.salle} + ' (' + ${emploi.type} + ')'"
+                  th:class="${emploi.type == 'Cours Magistral' ? 'cm' : (emploi.type == 'Travaux Dirigés' ? 'td' : 'tp')}">
+            </span>
+            </th:block>
+        </td>
+    </tr>
 
+    </tbody>
+</table>
 
-
-        </tr>
-        </tbody>
-    </table>
-</div>
 </body>
 </html>
