--- a/Gestion_Enseignement/src/main/resources/templates/repartition.html
+++ b/Gestion_Enseignement/src/main/resources/templates/repartition.html
@@ -33,37 +33,49 @@
 <header>
     <nav class="navbar navbar-inverse">
         <div class="container-fluid">
-            <div class="navbar-header">
-                <a class="navbar-brand">Gestion Universitaire</a>
-            </div>
-            <div class="collapse navbar-collapse" id="navbar-collapse">
-                <ul class="nav navbar-nav">
-                    <li><a>Accueil</a></li>
-                    <li><a>Emploi du Temps</a></li>
-                    <li><a>Syllabus</a></li>
-                    <li><a th:href="@{/ChefDepartement/Repartition}">Répartition</a></li>
-                    <li><a th:href="@{/ChefDepartement/Enseignant}">Enseignants</a></li>
-                    <li><a th:href="@{/ChefDepartement/Formation}">Formations</a></li>
-                    <li><a th:href="@{/ChefDepartement/Maquette}">Maquette</a></li>
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav navbar-left">
+                    <li>
+                        <a><span>Accueil</span></a>
+                    </li>
+                    <li>
+                        <a th:href="@{/ChefDepartement/EmploiDuTemps}"><span>Emploi du Temps</span></a>
+                    </li>
+                    <li>
+                        <a th:href="@{/ChefDepartement/Repartition}"><span>Repartition</span></a>
+                    </li>
+                    <li>
+                        <a th:href="@{/ChefDepartement/Enseignant}"><span>Enseignants</span></a>
+                    </li>
+                    <li>
+                        <a th:href="@{/ChefDepartement/Formation}"><span>Formations</span></a>
+                    </li>
+                    <li>
+                        <a th:href="@{/ChefDepartement/Maquette}"><span>Maquette</span></a>
+                    </li>
+                    <li>
+                        <a th:href="@{/ChefDepartement/Choix}"><span>Choix</span></a>
+                    </li>
                     <li>
                         <a th:href="@{/ChefDepartement/GestionEmploiDuTemps}"><span>Gestion emploi du temps</span></a>
                     </li>
-
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                            <span th:text="${prenom + ' ' + nom}"></span>
-                            <span class="caret"></span>
+                            <span th:text="${prenom+'. '+nom}"></span><span class="caret"></span>
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a th:href="@{/profil}">Profil</a></li>
-                            <li><a th:href="@{/logout}">Déconnexion</a></li>
+                            <li>
+                                <a th:href="@{/profil}"><span>Profil</span></a>
+                            </li>
+                            <li><a th:href="@{/logout}"><span>Deconnexion</span></a>
+                            </li>
                         </ul>
                     </li>
                 </ul>
-            </div>
-        </div>
+            </div><!-- /.navbar-collapse -->
+        </div><!-- /.container-fluid -->
     </nav>
 </header>
 <div th:if="${errorMessage}" class="alert alert-danger" role="alert">
