--- a/Gestion_Enseignement/src/main/resources/templates/template_Vacataire.html
+++ b/Gestion_Enseignement/src/main/resources/templates/template_Vacataire.html
@@ -24,7 +24,7 @@
                         <a><span>Accueil</span></a>
                     </li>
                     <li>
-                        <a><span>Emploi du Temps</span></a>
+                        <a th:href="@{/Vacataire/EmploiDuTemps}"><span>Emploi du Temps</span></a>
                     </li>
                     <li>
                         <a><span>Cours</span></a>
